# range-provisioner

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  conn_guac.py  deploy_heat.py  globals.yaml  guac_connect.py  heat_deploy.py  import_yaml.py  log_check.sh  manage_guac.py  manage_heat.py  manage_objects.py  modify_secgroups.py  object_upload.py  provision_env.py  pyproject.toml  range-provisioner.code-workspace  requirements.txt  setup.cfg  test.txt
archive/: delete_users.py  get_ids.py  manage_heat.py  manage_objects.py  modify_secgroups.py  old_main.py  test.py  test.yaml
assets/: config.sh
assets/guacd/: config.sh
assets/kali/: config.sh
assets/zeroday/: config.sh
assets/zeroday/root/: .bashrc  FLAG.txt
example/: globals.yaml
provisioner/: __init__.py
provisioner/provision/: heat.py
range_provisioner/: main.py  main2.py  provisioner.py
range_provisioner/object_store/: swift.py
range_provisioner/orchestration/: heat.py
range_provisioner/utils/: build_type.py  cli_parser.py  load_template.py  msg_format.py  pipeline.py
src/: groups.py  main.py  provisioner.py
src/models/: groups.py
src/object_store/: swift.py
src/objects/: connections.py  parse.py  users.py
src/orchestration/: guac.py  heat.py  provision.py  swift.py
src/provision/: guac.py  heat.py  swift.py
src/utils/: build_type.py  cli_parser.py  connections.py  generate.py  get_ids.py  load_template.py  manage_ids.py  msg_format.py
templates/: def.yaml  defaults.yaml  env.yaml  guac.south.yaml  guac.yaml  main.yaml  main_back.yml  sec.yaml  sec_plus_demo.yaml  sec_plus_secgroups.yaml  test.yaml  users.yaml
tests/: __init__.py  conftest.py
tests/templates/: env.yaml  guac.yaml  users.yaml
tests/unit/: test_api_connections.py  test_args.py  test_connetions.py  test_generate.py  test_load_template.py  test_msg_format.py
tests/utils/: manage_ids_test.py  testing.code-workspace
(+32 files in other folders)
