[project]
name = "range_provisioner"
version = "0.0.0"
description = "Cyber Range Infrastructure Provisioner - A deployment tool for managing cyber range infrastructure."
authors = [
    {name = "Jonathan Race", email = "jrace@augusta.edu"},
    {name = "Marcus Corulli", email = "mcorulli@augusta.edu"},
]
maintainers = [
    {name = "Jonathan Race", email = "jrace@augusta.edu"},
    {name = "Marcus Corulli", email = "mcorulli@augusta.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://gitlab.com/gacybercenter/open/range-provisioner"
"Bug Tracker" = "https://gitlab.com/gacybercenter/open/range-provisioner/issues"

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpaths = [
    "provisioner"
]