[metadata]
name = range-provisioner
version = 0.0.0
author = Jonathan Race and Marcus Corulli
author_email = jrace@augusta.edu
description = A Python package for running the Range Provisioner code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/gacybercenter/open/range-provisioner
project_urls =
    Bug Tracker = https://gitlab.com/gacybercenter/open/range-provisioner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = provisioner
packages = find:
python_requires = >=3.8

[options.packages.find]
where = provisioner